--- a/Frontend/src/app/alumni/login/login.component.css
+++ b/Frontend/src/app/alumni/login/login.component.css
@@ -1,9 +1,7 @@
-.basicbtn {
-    font-size: 1.1em !important;
+.btncolor {
     color: #005D63;
 }
 
-
-/* .logcard{
-   
-} */
+.card-shadow {
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, .1);
+}
