--- a/Frontend/src/app/shared/header/header.component.html
+++ b/Frontend/src/app/shared/header/header.component.html
@@ -9,10 +9,18 @@
 
         <!-- Links -->
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+
+
+            <!-- <li class="nav-item active">
                 <a class="nav-link waves-light" mdbWavesEffect>
                     <mdb-icon fas icon="envelope"></mdb-icon> Contact<span class="sr-only">(current)</span></a>
+            </li> -->
+
+            <li class="nav-item">
+                <a class="nav-link waves-light" mdbWavesEffect routerLink="/search">
+                    <mdb-icon fas icon="search"></mdb-icon>Find an Alumni</a>
             </li>
+
             <li class="nav-item">
                 <a class="nav-link waves-light" routerLink="/home" mdbWavesEffect> HOME</a>
             </li>
