--- a/Frontend/src/app/shared/home/home.component.html
+++ b/Frontend/src/app/shared/home/home.component.html
@@ -1,5 +1,4 @@
-<p>home works!</p>
-<h2><a routerLink="/search">Search Alumni</a></h2>
+Welcome!
 <!-- <mdb-card style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/Others/gradient1.jpg')">
     <div class="text-white text-center py-5 px-4 my-5">
       <div>
