--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -6,8 +6,37 @@
     background-color: #005D63;
 }
 
+.dgreen-text {
+    color: #005D63;
+}
+
 .lgreen {
-    background-color: rgba(220, 253, 255, 1);
+    background-color: #DCFDFF;
+}
+
+.lgreen-text {
+    color: #DCFDFF;
+}
+
+.yellow-text {
+    color: rgb(255, 255, 110);
+}
+
+.basicbtn {
+    font-size: 1.1em !important;
+    font-weight: bold !important;
+    border-radius: 5px !important;
+}
+
+.br-5 {
+    border-radius: 5px;
+}
+
+.my-link,
+.my-link:hover,
+.my-link:visited,
+.my-link:active {
+    color: inherit;
 }
 
 body {
