blogs on home quite sorted

--- a/Frontend/src/app/alumni/edit-profile/edit-profile.component.html
+++ b/Frontend/src/app/alumni/edit-profile/edit-profile.component.html
@@ -96,7 +96,7 @@
                 {{userData?.city}}
             </div>
 
-            <a class="m-5" data-toggle="modal" data-target="#basicExample" (click)="editLocation.show()"><b style="color: rgb(233, 30, 98)" > Edit Location </b></a>
+            <a class="m-5" data-toggle="modal" data-target="#basicExample" (click)="editLocation.show()"><b style="color: rgb(233, 30, 98)" ><mdb-icon far icon="edit"></mdb-icon> Edit Location </b></a>
         </div>
 
     </div>
@@ -110,7 +110,7 @@
             </div>
         </form>
         <div>
-            <button type="submit" (click)="addBio()" mdbBtn color="dark" mdbWavesEffect>Post</button>
+            <button type="submit" class="br-5 dgreen white-text m-btn" (click)="addBio()" mdbBtn size="md" mdbWavesEffect>Post</button>
         </div>
     </div>
 
