--- a/Frontend/src/app/alumni/login/login.component.html
+++ b/Frontend/src/app/alumni/login/login.component.html
@@ -25,7 +25,7 @@
                 <div>New to Union? <a routerLink="/register" class="lgreen-text my-link yellow-text">Sign up here!</a></div>
 
                 <!-- Sign up button -->
-                <button mdbBtn size="lg" block="true" class="my-4 basicbtn white btncolor" type="submit" (click)="login()">Sign in
+                <button mdbBtn size="lg" block="true" class="my-4 basicbtn white btncolor l-btn" type="submit" (click)="login()">Sign in
          </button>
 
                 <!-- Loader -->
