--- a/Frontend/src/app/alumni/register/register.component.html
+++ b/Frontend/src/app/alumni/register/register.component.html
@@ -80,7 +80,7 @@
             <!-- IMAGE UPLOAD -->
 
             <!-- Sign up button -->
-            <button mdbBtn block="true" class="my-5 basicbtn white btncolor" type="submit" (click)="register()" *ngIf="!isLoading">Sign up
+            <button mdbBtn block="true" class="my-5 basicbtn white btncolor l-btn" type="submit" (click)="register()" *ngIf="!isLoading">Sign up
       </button>
 
             <!-- loader -->
