--- a/Frontend/src/app/shared/search-alumni/search-alumni.component.css
+++ b/Frontend/src/app/shared/search-alumni/search-alumni.component.css
@@ -1,12 +1,5 @@
-/* @import url("https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800");
-* {
-    box-sizing: border-box;
+.m-btn {
+    font-size: 0.9em !important;
+    text-transform: initial;
+    /* font-weight: 500 !important; */
 }
-
-body {
-    background-color: #FFE53B;
-    background-image: linear-gradient(147deg, #FFE53B 0%, #fd3838 74%);
-    min-height: 100vh;
-    font-family: "Fira Sans", sans-serif;
-    display: flex;
-} */
