events card n styling

--- a/Frontend/src/app/shared/search-alumni/search-alumni.component.html
+++ b/Frontend/src/app/shared/search-alumni/search-alumni.component.html
@@ -41,13 +41,14 @@
             </div>
             <div class="row my-5 ml-3">
                 <div class="col-3 my-3" *ngFor="let user of alluser |verified:true |  alumniSearch:searchName:searchCourse:searchStream:searchYear ">
-                    <div class="card text-center" *ngIf="user.verified == true ">
+                    <div class="card" *ngIf="user.verified == true ">
                         <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
                         <div class="card-body">
-                            <h5 class="card-title"> <b>Er. {{user.fname}} {{user.lname}}</b> </h5>
+                            <h5 class="card-title dgreen-text"> <b>{{user.fname}} {{user.lname}}</b> </h5>
                             <p class="card-text">{{user.course}} {{user.branch}} {{user.gyear}} passout</p>
-                            <a *ngIf="getrole()" [routerLink]="['/admin', user._id]" class="btn btn-primary">View</a>
-                            <button mdbBtn size="sm" *ngIf="!getrole()" [routerLink]="['/profile', user._id]" class="btn-primary br-5 m-btn">View Profile</button>
+                            <!-- <a *ngIf="getrole()" [routerLink]="['/admin', user._id]" class="btn btn-primary">View</a> -->
+                            <button mdbBtn size="sm" *ngIf="getrole()" [routerLink]="['/admin', user._id]" class="dgreen white-text br-5 m-btn">View Profile</button>
+                            <button mdbBtn size="sm" *ngIf="!getrole()" [routerLink]="['/profile', user._id]" class="dgreen white-text br-5 m-btn">View Profile</button>
                         </div>
                     </div>
                 </div>
