--- a/Frontend/src/app/shared/events/events.component.html
+++ b/Frontend/src/app/shared/events/events.component.html
@@ -1,38 +1,38 @@
+<form *ngIf="getrole()" action="" class="col-4 my-5" [formGroup]="EventForm">
+    <h1>Post an event</h1>
+    <div class="md-form-lg mt-5 mb-4">
+        <label for="form1" class="">Event Name</label>
+        <input mdbInput type="text" id="form1" formControlName="etitle" class="form-control">
+    </div>
+    <div class="md-form-lg my-4">
+        <label for="form1" class="">Date</label>
+        <input mdbInput type="date" id="form1" formControlName="date" class="form-control">
+    </div>
+    <div class="md-form-lg my-4">
+        <label for="form7">Event Description</label>
+        <textarea type="text" id="form7" formControlName="eDiscription" class="md-textarea md-textarea-auto form-control" mdbInput></textarea>
+    </div>
+    <button type="submit" mdbBtn size=sm class="dgreen white-text br-5 m-btn" (click)="post()" mdbWavesEffect>Post</button>
+</form>
 
-  <div class="row">
-      <div *ngFor="let event of allevents" class="col-4">
-        <mdb-card>
-            <!--Card content-->
-            <mdb-card-body>
-          
-              <!--Title-->
-              <mdb-card-title>
-                <h4>{{event.etitle}}</h4>
-                <h5>{{event.edate.split('T')[0]}}</h5>
-              </mdb-card-title>
-          
-              <!--Text-->
-              <mdb-card-text> {{event.eDiscription}}
-              </mdb-card-text>
-            </mdb-card-body>
-          </mdb-card>
-          <br><br>
-      </div>
-  </div>
-  
-<form *ngIf="getrole()" action="" class="col-4 mt-5"  [formGroup]="EventForm">
-    <h1>Post a event</h1>
-    <div class="md-form-lg mt-5">
-    <input mdbInput type="text" id="form1" formControlName="etitle" class="form-control">
-    <label for="form1" class="">title</label>
-   </div>
-   <div class="md-form-lg mt-5">
-    <input mdbInput type="date" id="form1" formControlName="date" class="form-control">
-    <label for="form1" class="">Date</label>
-   </div>
-   <div class="md-form-lg">
-    <textarea type="text" id="form7" formControlName="eDiscription" class="md-textarea md-textarea-auto form-control" mdbInput></textarea>
-    <label for="form7">Write Here</label>
-   </div>
-   <button type="submit" mdbBtn color="dark" (click)="post()" mdbWavesEffect>Post</button>
-   </form>
+<div class="m-5">
+    <h1>Added Events</h1>
+    <div class="row p-3">
+
+        <div *ngFor="let event of allevents" class="col-4">
+            <div class="br-5 p-2 shade">
+                <div class="m-4">
+                    <h4 class="dgreen-text">{{event.etitle}}</h4>
+                    <h5>{{event.edate.split('T')[0]}}</h5>
+                </div>
+
+                <!--Text-->
+                <div class="m-3">
+                    {{event.eDiscription}}
+                </div>
+
+            </div>
+            <br><br>
+        </div>
+    </div>
+</div>
